hard-gists/813813/run.log
=== Docker Run Log for 813813 ===
Started at: Mi 29. Okt 17:39:41 CET 2025

[2025-10-29 17:39:42] START: Running container for 813813
[2025-10-29 17:39:42] SUCCESS: Container 9f798aa784d6d75828a8e0ed1a57ca90ac6232a6c925e63ba10c2e325ae4dbdc started for 813813
=== Container logs for 813813 ===
  File "/snippet.py", line 27
    print "files.value %s" % dircount
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 813813 ===
[2025-10-29 17:39:44] INFO: Container 9f798aa784d6d75828a8e0ed1a57ca90ac6232a6c925e63ba10c2e325ae4dbdc has stopped
